--- a/src/app/league-zone/league-manage/league-manage-schedule/league-manage-schedule.component.scss
+++ b/src/app/league-zone/league-manage/league-manage-schedule/league-manage-schedule.component.scss
@@ -223,7 +223,7 @@
 
 .pokemon-row {
   display: grid;
-  grid-template-columns: 1.4fr repeat(4, minmax(0, 1fr));
+  grid-template-columns: 1.4fr 1fr 0.8fr 0.8fr 0.8fr;
   gap: var(--pdz-space-xs);
   align-items: center;
 
