--- a/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.scss
+++ b/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.scss
@@ -262,7 +262,7 @@ $container-padding: var(--pdz-space-xs);
     opacity: 0.6;
   }
 
-  &--brought {
+  &--used {
     border-color: pdz-color(positive);
 
     pdz-sprite {
