preserve black text in replay chart even on darkmode

--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -245,7 +245,7 @@
           </div>
         </div>
         <div class="w-full flex justify-center">
-          <replay-chart class="w-full bg-slate-200 rounded-lg border-2 border-slate-400 max-w-160"
+          <replay-chart class="w-full bg-slate-200 text-black rounded-lg border-2 border-slate-400 max-w-160"
             [data]="replayData.stats"></replay-chart>
         </div>
       </div>
